--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ two_columns_layout: true
 
 
 # Advanced Settings
-url: "http://127.0.0.1:4000/" # the base hostname & protocol for your site
+url: "https://chanoyoung.github.io" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog
 google_analytics: "UA-XXXXXXXX-X"
 language: "ko"
